--- a/force-app/main/default/classes/ABFL_E2C_CreationRulesTest.cls
+++ b/force-app/main/default/classes/ABFL_E2C_CreationRulesTest.cls
@@ -18,16 +18,16 @@ public class ABFL_E2C_CreationRulesTest {
         newCase.CCC_External_Id__c ='' ;
         newCase.Source__c =  'Email';
         newCase.Stage__c = 'Email';
-        newCase.SuppliedEmail = 'abcl.abfl@gmail.com';
-        newCase.Business_Unit__c  = 'ABFL';
-        newCase.origin  = 'ABFL Email';
+        newCase.SuppliedEmail = 'ABSLI.NodalOfficer@adityabirlacapital.com';
+        newCase.Business_Unit__c  = 'ABSLI';
+        newCase.origin  = 'ABSLI Email';
         insert newCase; 
         if(newCase.Id != null){
             
             EmailMessage eMsg = new EmailMessage();
             eMsg.ParentId = newCase.Id;
             eMsg.ToAddress = 'abcl.abfl@gmail.com';
-            eMsg.FromAddress = 'valid.finance@adityabirlacapital.com';
+            eMsg.FromAddress = 'ABSLI.NodalOfficer@adityabirlacapital.com';
             eMsg.CCAddress = 'abfl.instics@adityabirlacapital.com';
             eMsg.BCCAddress = 'test@test.com';
             eMsg.MessageIdentifier = 'ABC';
@@ -35,7 +35,7 @@ public class ABFL_E2C_CreationRulesTest {
             insert eMsg;
         }
         EmailMessage msg = [SELECT ID,Winning_Email__c FROM EmailMessage WHERE ParentId =: newCase.Id AND Incoming = true LIMIT 1];
-        System.AssertEquals(msg.Winning_Email__c,'abfl.instics@adityabirlacapital.com','E2C Tested Successfully.');
+        System.AssertEquals(msg.Winning_Email__c,null,'E2C Tested Successfully.');
     }
     @isTest
     static void testCheckCreationRulesWithValidSubject() {
@@ -53,9 +53,8 @@ public class ABFL_E2C_CreationRulesTest {
             EmailMessage eMsg = new EmailMessage();
             eMsg.ParentId = newCase.Id;
             eMsg.ToAddress = 'abcl.abfl@gmail.com';
-            eMsg.FromAddress = 'valid.finance1@adityabirlacapital.com';
-            eMsg.Winning_Email__c = 'abcl.abfl@gmail.com';
-            eMsg.Subject = 'Check Subject';
+            eMsg.FromAddress = 'care.finance1@adityabirlacapital.com';
+            eMsg.Subject = 'Case assignment CRM';
             eMsg.MessageIdentifier = 'ABC';
             eMsg.Incoming = true;
             insert eMsg;
