Email Update Fixexs

--- a/force-app/main/default/classes/ABSLI_EmailUpdateIntegration_Test.cls
+++ b/force-app/main/default/classes/ABSLI_EmailUpdateIntegration_Test.cls
@@ -1,11 +1,20 @@
-@IsTest
-public class ABSLI_EmailUpdateIntegration_Test {
-   @testSetup
+/**
+ * @description Unit Test Class for Contact Update (Email and/or Mobile Number) Details Integration
+ *
+ * @author Laxman R
+ * @date 2024-05-29
+ */
+@isTest
+public with sharing class ABSLI_EmailUpdateIntegration_Test {
+	/**
+	 * @description Test Data Setup for this Test Class
+	 */
+	@testSetup
 	static void setupTestData() {
 		ASF_Integration__c integ = new ASF_Integration__c();
-		integ.External_Id__c = 'ABSLI_PAS';
-		integ.Display_Name__c = 'Email Update';
-		integ.Query_Fields__c = 'Id, Status, OwnerId, AssetId, Asset.Policy_No__c, ABSLI_Case_Detail__c, ABSLI_Case_Detail__r.From_Date__c, ABSLI_Case_Detail__r.To_Date__c, AccountId, Account.PersonBirthdate, Business_Unit__c, CCC_External_Id__c';
+		integ.External_Id__c = 'PNFT008';
+		integ.Display_Name__c = 'Contact Detail Update';
+		integ.Query_Fields__c = 'Id, Status, OwnerId, CaseNumber, Client_Code_Text__c, Account.Client_Code__c, ABSLI_Case_Detail__c, ABSLI_Case_Detail__r.Status_Valid_For_STP__c, AccountId, ABSLI_Case_Detail__r.Mobile_Number__c, ABSLI_Case_Detail__r.Email_Id__c, Technical_Source__c, Business_Unit__c, CCC_External_Id__c';
 		integ.Processing_Class__c = 'ABSLI_EmailUpdateIntegration';
 		integ.When_to_Appear__c = 'Stage Entry';
 		integ.Type__c = 'Process';
@@ -13,7 +22,7 @@ public class ABSLI_EmailUpdateIntegration_Test {
 		insert integ;
 
 		Account accRec = ASF_TestDataFactory.insertPersonAccount('Abinash', 'Panigrahi', '100');
-		accRec.PersonBirthdate = Date.today();
+		accRec.Client_Code__c = 'ABI123';
 		update accRec;
 
 		Asset assetRec = ASF_TestDataFactory.createAsset(accRec.Id, 'Loans');
@@ -21,9 +30,9 @@ public class ABSLI_EmailUpdateIntegration_Test {
 		update assetRec;
 
 		ABSLI_Case_Detail__c detailRec = new ABSLI_Case_Detail__c();
-		detailRec.From_Date__c = Date.today();
-        detailRec.Status_Valid_For_STP__c = true;
-		detailRec.To_Date__c = Date.today().addDays(2);
+		detailRec.Mobile_Number__c = 'PAYTM123';
+		detailRec.Email_Id__c = 'panigrahi@abinash.com';
+		detailRec.Status_Valid_For_STP__c = true;
 		insert detailRec;
 
 		Case caseRec = ASF_TestDataFactory.createInteractionCaseRecords()[0];
@@ -33,56 +42,60 @@ public class ABSLI_EmailUpdateIntegration_Test {
 		caseRec.AssetId = assetRec.Id;
 		caseRec.ABSLI_Case_Detail__c = detailRec.Id;
 		caseRec.AccountId = accRec.Id;
-        caseRec.CCC_External_Id__c = 'ABSLI_PAS';
+		caseRec.CCC_External_Id__c = 'PNFT008';
+		caseRec.Client_Code_Text__c = '8895335596';
+		caseRec.Technical_Source__c = 'LWC';
 		update caseRec;
 
-		ASF_TestDataFactory.createCaseIntegration(caseRec.Id, 'ABSLI_PAS');
+		ASF_TestDataFactory.createCaseIntegration(caseRec.Id, 'PNFT008');
 
-        ASF_Case_Category_Config__c caseCatConfig = new ASF_Case_Category_Config__c();
-        caseCatConfig.CCC_External_Id__c = 'ABSLI_PAS';
-        caseCatConfig.Overall_Case_Closure_SLA__c = 10;
-        caseCatConfig.First_Stage__c = 'Pending with Initiator';
-        caseCatConfig.Type__c = 'Bureau Related';
-        caseCatConfig.Sub_Type__c = 'CIBIL Related Details - Ownership Related';
-        caseCatConfig.Overall_Case_Closure_SLA__c = 56;
-        caseCatConfig.Nature__c = 'Request';
-        caseCatConfig.Source__c = 'CEC';
-        caseCatConfig.Send_FTR_communications__c = true;
-        caseCatConfig.Product__c = 'TFE, CV, LCV, CE, SA, GLN, RBG-CV, RBG-CE, ABG, ARB, MFI, TDF';
-        insert caseCatConfig;
-       
+		ASF_Case_Category_Config__c caseCatConfig = new ASF_Case_Category_Config__c();
+		caseCatConfig.CCC_External_Id__c = 'PNFT008';
+		caseCatConfig.Overall_Case_Closure_SLA__c = 10;
+		caseCatConfig.First_Stage__c = 'Pending with Initiator';
+		caseCatConfig.Type__c = 'Bureau Related';
+		caseCatConfig.Sub_Type__c = 'CIBIL Related Details - Ownership Related';
+		caseCatConfig.Overall_Case_Closure_SLA__c = 56;
+		caseCatConfig.Nature__c = 'Request';
+		caseCatConfig.Source__c = 'CEC';
+		caseCatConfig.Product__c = 'TFE, CV, LCV, CE, SA, GLN, RBG-CV, RBG-CE, ABG, ARB, MFI, TDF';
+		insert caseCatConfig;
 	}
 
 	@isTest
 	static void evaluate_Test_Method() {
-		ABSLI_EmailUpdateIntegration emailint = new ABSLI_EmailUpdateIntegration();
+		ABSLI_EmailUpdateIntegration integrationObj = new ABSLI_EmailUpdateIntegration();
 		Case caseRec = [
 			SELECT
 				Id,
 				Status,
 				OwnerId,
-				Asset.Policy_No__c,
-				ABSLI_Case_Detail__r.From_Date__c,
-				ABSLI_Case_Detail__r.To_Date__c,
-                ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				CaseNumber,
+				Client_Code_Text__c,
+				Account.Client_Code__c,
+				ABSLI_Case_Detail__c,
+				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+            	ABSLI_Case_Detail__r.Source_Request_submitted_by__c,
+				AccountId,
+				ABSLI_Case_Detail__r.Mobile_Number__c,
+				ABSLI_Case_Detail__r.Email_Id__c,
+				Technical_Source__c,
 				Business_Unit__c,
-				Account.PersonBirthdate,
-                AssetId,
-                AccountId,
-                ABSLI_Case_Detail__c
+				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
 		];
 
 		Test.startTest();
 		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
-		ASF_IntegrationsController.IntegrationWrapper result = emailint.evaluate(caseRec);
-		System.assertEquals('Success', result.status);
+		ASF_IntegrationsController.IntegrationWrapper result = integrationObj.evaluate(caseRec);
+		System.assertEquals('Error', result.status);
 		Test.stopTest();
 	}
-    @isTest
+
+	@isTest
 	static void run_Test_Method() {
-		ABSLI_EmailUpdateIntegration emailint = new ABSLI_EmailUpdateIntegration();
+		ABSLI_EmailUpdateIntegration integrationObj = new ABSLI_EmailUpdateIntegration();
 		ASF_Integration__c integ = [
 			SELECT Id, Processing_Class__c, External_Id__c
 			FROM ASF_Integration__c
@@ -93,59 +106,64 @@ public class ABSLI_EmailUpdateIntegration_Test {
 				Id,
 				Status,
 				OwnerId,
-                CaseNumber,
-				Asset.Policy_No__c,
-				ABSLI_Case_Detail__r.From_Date__c,
-				ABSLI_Case_Detail__r.To_Date__c,
-                ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
-                ABSLI_Case_Detail__r.Email_Id__c,
+				CaseNumber,
+				Client_Code_Text__c,
+				Account.Client_Code__c,
+				ABSLI_Case_Detail__c,
+				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				AccountId,
+				ABSLI_Case_Detail__r.Mobile_Number__c,
+				ABSLI_Case_Detail__r.Email_Id__c,
+				Technical_Source__c,
 				Business_Unit__c,
-				Account.PersonBirthdate,
-                Account.Client_Code__c
+				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
 		];
 
 		Test.startTest();
 		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
-		ASF_IntegrationsController.IntegrationWrapper res = emailint.run(integ, caseRec);
-		//System.assertEquals('null', res.status);
+		ASF_IntegrationsController.IntegrationWrapper res = integrationObj.run(integ, caseRec);
+		System.assertEquals('Success', res.status);
 		Test.stopTest();
 	}
 
 	@isTest
 	static void evaluate_Test_MethodBulk() {
-		ABSLI_EmailUpdateIntegration emailint = new ABSLI_EmailUpdateIntegration();
+		ABSLI_EmailUpdateIntegration integrationObj = new ABSLI_EmailUpdateIntegration();
 		Case caseRec = [
 			SELECT
 				Id,
 				Status,
 				OwnerId,
-				Asset.Policy_No__c,
-				ABSLI_Case_Detail__r.From_Date__c,
-				ABSLI_Case_Detail__r.To_Date__c,
-                ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				CaseNumber,
+				Client_Code_Text__c,
+				Account.Client_Code__c,
+				ABSLI_Case_Detail__c,
+				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+            	ABSLI_Case_Detail__r.Source_Request_submitted_by__c,
+				AccountId,
+				ABSLI_Case_Detail__r.Mobile_Number__c,
+				ABSLI_Case_Detail__r.Email_Id__c,
+				Technical_Source__c,
 				Business_Unit__c,
-				Account.PersonBirthdate,
-                AssetId,
-                AccountId,
-                ABSLI_Case_Detail__c
+				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
 		];
 
 		Test.startTest();
 		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
-		Map<Id, ASF_IntegrationsController.IntegrationWrapper> result = emailint.evaluate(
+		Map<Id, ASF_IntegrationsController.IntegrationWrapper> result = integrationObj.evaluate(
 			new List<Case>{ caseRec }
 		);
-		System.assertEquals('Success', result.get(caseRec.Id).status);
+		System.assertEquals('Error', result.get(caseRec.Id).status);
 		Test.stopTest();
 	}
 
 	@isTest
 	static void run_Test_MethodBulk() {
-		ABSLI_EmailUpdateIntegration emailint = new ABSLI_EmailUpdateIntegration();
+		ABSLI_EmailUpdateIntegration integrationObj = new ABSLI_EmailUpdateIntegration();
 		ASF_Integration__c integ = [
 			SELECT Id, Processing_Class__c, External_Id__c
 			FROM ASF_Integration__c
@@ -156,46 +174,51 @@ public class ABSLI_EmailUpdateIntegration_Test {
 			SELECT
 				Id,
 				Status,
-                CaseNumber,
 				OwnerId,
-				Asset.Policy_No__c,
-				ABSLI_Case_Detail__r.From_Date__c,
-				ABSLI_Case_Detail__r.To_Date__c,
-                ABSLI_Case_Detail__r.Email_Id__c,
-                ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				CaseNumber,
+				Client_Code_Text__c,
+				Account.Client_Code__c,
+				ABSLI_Case_Detail__c,
+				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				AccountId,
+				ABSLI_Case_Detail__r.Mobile_Number__c,
+				ABSLI_Case_Detail__r.Email_Id__c,
+				Technical_Source__c,
 				Business_Unit__c,
-				Account.PersonBirthdate,
-                Account.Client_Code__c
+				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
 		];
 
 		Test.startTest();
 		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
-		Map<Id, ASF_IntegrationsController.IntegrationWrapper> res = emailint.run(
+		Map<Id, ASF_IntegrationsController.IntegrationWrapper> res = integrationObj.run(
 			new Map<Id, List<ASF_Integration__c>>{ caseRec.Id => new List<ASF_Integration__c>{ integ } },
 			new List<Case>{ caseRec }
 		);
 		System.assertEquals('Success', res.get(caseRec.Id).status);
 		Test.stopTest();
 	}
+
 	@IsTest
 	static void testProcessResponse() {
-		ABSLI_EmailUpdateIntegration emailint = new ABSLI_EmailUpdateIntegration();
-        Case caseRec = [
+		ABSLI_EmailUpdateIntegration integrationObj = new ABSLI_EmailUpdateIntegration();
+		Case caseRec = [
 			SELECT
 				Id,
 				Status,
 				OwnerId,
-            	CaseNumber,
-				Asset.Policy_No__c,
-				ABSLI_Case_Detail__r.From_Date__c,
-				ABSLI_Case_Detail__r.To_Date__c,
+				CaseNumber,
+				Client_Code_Text__c,
+				Account.Client_Code__c,
+				ABSLI_Case_Detail__c,
+				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
+				AccountId,
+				ABSLI_Case_Detail__r.Mobile_Number__c,
+				ABSLI_Case_Detail__r.Email_Id__c,
+				Technical_Source__c,
 				Business_Unit__c,
-				Account.PersonBirthdate,
-                CCC_External_Id__c,
-                ContactId,
-                AccountId, No_Auto_Communication__c
+				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
 		];
@@ -206,17 +229,19 @@ public class ABSLI_EmailUpdateIntegration_Test {
 		];
 
 		ABSLI_EmailUpdateIntegration.EmailUpdateResponse responseObj = new ABSLI_EmailUpdateIntegration.EmailUpdateResponse();
-		responseObj.TRANS_NO = caseRec.CaseNumber;
-		responseObj.ProcessMessage = 'test mesage';
+		responseObj.TRANS_NO = '00';
+		responseObj.ProcessMessage = '00';
 		responseObj.ProcessCode = '00';
-        
+		responseObj.FaultCode = '8895335596';
+		responseObj.FaultMessage = 'SAV';
+
 		caseIntegRec.Response__c = JSON.serialize(responseObj);
 		caseIntegRec.Status__c = 'Success';
 		update caseIntegRec;
 
 		Test.startTest();
-        ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
-		emailint.processResponse(caseIntegRec);
+		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
+		integrationObj.processResponse(caseIntegRec);
 		System.assertEquals(caseIntegRec.Status__c, 'Success');
 		Test.stopTest();
 	}
